<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.login.NewAccountActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etEmailNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="false"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordNewAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPasswordNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/etConfirmPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/et_confirm_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/btn_ripple_sigin"
            android:text="@string/btn_new_account"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toTopOf="@+id/btnGoBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ripple_new_account"
            android:text="@string/btn_go_back"
            android:textColor="@color/colorSecundaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>