<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.newPlan.NewPlanActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:paddingTop="24dp">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivNewPlan"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:background="@drawable/border_image_view"
                android:contentDescription="@string/title_new_plan"
                android:cropToPadding="false"
                android:padding="50dp"
                android:src="@drawable/ic_add_photo"
                android:tint="@color/colorAccent" />

            <ImageView
                android:id="@+id/ivRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@string/title_new_plan"
                android:src="@android:drawable/ic_menu_rotate"
                android:tint="@color/colorAccent" />
        </FrameLayout>

        <EditText
            android:id="@+id/etTitleNewPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/title_new_plan"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <EditText
            android:id="@+id/etDescNewPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/desc_new_plan"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitleNewPlan" />

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/title_new_plan"
            android:src="@drawable/ic_place"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescNewPlan" />

        <TextView
            android:id="@+id/tvLocationNewPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/ivLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivLocation"
            app:layout_constraintTop_toTopOf="@+id/ivLocation" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/title_new_plan"
            android:src="@drawable/ic_plans"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLocation" />

        <TextView
            android:id="@+id/tvDateNewPlan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/ivCalendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCalendar"
            app:layout_constraintTop_toTopOf="@+id/ivCalendar" />

        <ImageView
            android:id="@+id/ivPrice"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/title_new_plan"
            android:src="@drawable/ic_hucha"
            android:tint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCalendar" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/white"
            android:hint="@string/add_price"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/ivPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivPrice"
            app:layout_constraintTop_toTopOf="@+id/ivPrice" />

        <Button
            android:id="@+id/btnNewPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_ripple_sigin"
            android:text="@string/btn_new_plan"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>